test/pos/EqConstr0.smt2_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness constraints


; Horn constraints
(constraint (forall ((a Int)(x Int)(y Obj a)(v1 Int)) (=> (and True (and True (and True (= x y)))) (= y x))))
